[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"
rust-version = "1.63.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
itertools = "0.10.5"
num-format = "0.4.4"
queue = "0.3.0"
termion = "2.0.1"
sorted-vec = "0.8.1"
